--- a/0. Querying the Twitter API.ipynb
+++ b/0. Querying the Twitter API.ipynb
@@ -15,8 +15,6 @@
    },
    "outputs": [],
    "source": [
-    "#!pip install package\n",
-    "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import tweepy\n",
@@ -39,7 +37,7 @@
    },
    "outputs": [],
    "source": [
-    "hs = pd.read_csv('NAACL_SRW_2016.csv', index_col=0, header=None)\n",
+    "hs = pd.read_csv('hatespeech-master/NAACL_SRW_2016.csv', index_col=0, header=None)\n",
     "hs = hs.reset_index()"
    ]
   },
@@ -52,26 +50,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                   ID   Class\n",
-      "0  572342978255048705  racism\n",
-      "1  572341498827522049  racism\n",
-      "2  572340476503724032  racism\n",
-      "3  572334712804384768  racism\n",
-      "4  572332655397629952  racism\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "hs = hs.rename(columns={0: 'ID', 1: 'Class'})\n",
     "hs.Class = hs.Class.astype('str')\n",
-    "print(hs.head())"
+    "#print(hs.head())"
    ]
   },
   {
@@ -83,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +77,7 @@
        "16907"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,23 +98,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'tweepy' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-7b8a42171bcb>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0maccess_token\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"Use Yours\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[0maccess_token_secret\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"Use Yours\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m \u001b[0mauth\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtweepy\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mOAuthHandler\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mconsumer_key\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mconsumer_secret\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      8\u001b[0m \u001b[0mauth\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mset_access_token\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0maccess_token\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maccess_token_secret\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'tweepy' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "####CHANGE THE KEYS TO YOUR OWN USING THE TWITTER API####\n",
     "\n",
@@ -161,23 +134,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "16035"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "So Drasko just said he was impressed the girls cooked half a chicken.. They cooked a whole one  #MKR\n"
+     ]
     }
    ],
    "source": [
     "t = tweet_list[0]\n",
-    "len(tweet_list)"
+    "print(t.text)"
    ]
   },
   {
@@ -186,37 +156,54 @@
     "collapsed": true
    },
    "source": [
-    "After you've run the querying code for at least three hours, you can create lists of various objects from the tweets. Here is how you do that for the tweets:"
+    "After you've run the querying code for at least three hours, you can create lists of various objects from the tweets. In this function we add all of the attributes we were interested in for this project. To see all of the possible attributes, check out the Twitter API's website."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                                              Tweets\n",
-      "0  @ummayman90 @wood_brwood333 For example, in Me...\n",
-      "1  @ummayman90 Again, your entire concept of god ...\n",
-      "2  @anjemchoudary Your prophet was a rapist, murd...\n",
-      "3  RT @DilanaKurdi: Yazidi children who are taken...\n",
-      "4  @anjemchoudary Accepting the idea that Allah o...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "t= tweet_list[0]\n",
-    "\n",
-    "tweets = []\n",
-    "\n",
-    "for i in range(16035):\n",
-    "\tt = tweet_list[i]\n",
-    "\ttweets.append(t.text)\n",
-    "    \n",
-    "#print(tweets)"
+    "def get_tweet_info(tweet_list):\n",
+    "    len_list = len(tweet_list)\n",
+    "    tweet = []\n",
+    "    id_str = []\n",
+    "    favorite_count = []\n",
+    "    created_at = []\n",
+    "    screen_name = []\n",
+    "    location = []\n",
+    "    description = []\n",
+    "    followers_count = []\n",
+    "    hashtags = []\n",
+    "    user_mentions = []\n",
+    "    for t in tweet_list:\n",
+    "        tweet.append(t.text)\n",
+    "        id_str.append(t.id_str)\n",
+    "        favorite_count.append(t.favorite_count)\n",
+    "        created_at.append(t.created_at)\n",
+    "        screen_name.append(t.author.screen_name)\n",
+    "        location.append(t.author.location)\n",
+    "        description.append(t.author.description)\n",
+    "        followers_count.append(t.author.followers_count)\n",
+    "        hashtags.append(t.entities['hashtags'])\n",
+    "        user_mentions.append(t.entities['user_mentions'])\n",
+    "    tweet_info = pd.DataFrame({'Tweets': tweet, \"ID\": id_str, \n",
+    "                               \"Authors\": screen_name, \"Locations\": location, \n",
+    "                               \"Descriptions\": description,\"Follower Count\":followers_count, \n",
+    "                               \"Time Tweeted\": created_at, \"User Mentions\": user_mentions, \n",
+    "                               \"Hashtags\": hashtags, \"Favorite Count\":favorite_count})\n",
+    "    return tweet_info"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = get_tweet_info(tweet_list)\n",
+    "#df.head"
    ]
   },
   {
@@ -228,237 +215,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "authors = []\n",
-    "t=tweet_list[0]\n",
-    "\n",
-    "for i in range(16035):\n",
-    "\tt = tweet_list[i]\n",
-    "\tauthors.append(t.author.screen_name)\n",
-    "\n",
-    "#print(authors)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Locations:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "locations = []\n",
-    "t=tweet_list[0]\n",
-    "\n",
-    "for i in range(16035):\n",
-    "\tt = tweet_list[i]\n",
-    "\tlocations.append(t.author.location)\n",
-    "\n",
-    "#print(locations)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\"Descriptions\" - Twitter bios:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "descriptions = []\n",
-    "t=tweet_list[0]\n",
-    "\n",
-    "for i in range(16035):\n",
-    "\tt = tweet_list[i]\n",
-    "\tdescriptions.append(t.author.description)\n",
-    "\n",
-    "#print(descriptions)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Number of followers:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "followers_count = []\n",
-    "t=tweet_list[0]\n",
-    "\n",
-    "for i in range(16035):\n",
-    "\tt = tweet_list[i]\n",
-    "\tfollowers_count.append(t.author.followers_count)\n",
-    "\n",
-    "#print(followers_count)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Time tweeted:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "time_tweeted = []\n",
-    "t=tweet_list[0]\n",
-    "\n",
-    "for i in range(16035):\n",
-    "\tt = tweet_list[i]\n",
-    "\ttime_tweeted.append(t.created_at)\n",
-    "\n",
-    "#print(time_tweeted)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "User mentions:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "user_mentions = []\n",
-    "t=tweet_list[0]\n",
-    "\n",
-    "for i in range(16035):\n",
-    "\tt = tweet_list[i]\n",
-    "\tuser_mentions.append(t.entities['user_mentions'])\n",
-    "#print(user_mentions)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Hashtags:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "hashtags = []\n",
-    "t=tweet_list[0]\n",
-    "\n",
-    "for i in range(16035):\n",
-    "\tt = tweet_list[i]\n",
-    "\thashtags.append(t.entities['hashtags'])\n",
-    "\n",
-    "#print(hashtags)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Favorite counts:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "favorite_counts = []\n",
-    "t=tweet_list[0]\n",
-    "\n",
-    "for i in range(16035):\n",
-    "\tt = tweet_list[i]\n",
-    "\tfavorite_counts.append(t.favorite_count)\n",
-    "\n",
-    "#print(favorite_counts)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 45,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "id_str = []\n",
-    "t = tweet_list[0]\n",
-    "\n",
-    "for i in range(16035):\n",
-    "\tt = tweet_list[i]\n",
-    "\tid_str.append(t.id_str)\n",
-    "    \n",
-    "#print(id_str)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "tweet_info = pd.DataFrame({'Tweets': tweets, \"ID\": id_str, \"Authors\": authors, \"Locations\": locations, \"Descriptions\": descriptions,\n",
-    "                          \"Follower Count\":followers_count, \"Time Tweeted\": time_tweeted, \"User Mentions\": user_mentions, \n",
-    "                           \"Hashtags\": hashtags, \"Favorite Count\":favorite_counts})\n",
-    "#print(tweet_info.head())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "tweet_info.to_csv('hatespeech.csv')"
+    "df.to_csv('hatespeech.csv')"
    ]
   }
  ],
